feat: add author name in meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Slayer Calculator</title>
   <base href="/Dual-Maracas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Rodrigo Tallar">
+  <meta name="keywords" content="OSRS, Runescape, Slayer">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
