move repo to org

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Slayer Calculator</title>
-  <base href="/Dual-Maracas">
+  <base href="/SlayerCalc">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Rodrigo Tallar">
   <meta name="keywords" content="OSRS, Runescape, Slayer">
